--- a/Algebra/Homological Algebra/Homological Algebra.tex
+++ b/Algebra/Homological Algebra/Homological Algebra.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper]{article}
 
-\input{C:/Users/liula/Desktop/Latex/Headers V1.2.tex}
+\input{C:/Users/liula/Desktop/Latex/Headers/Headers.tex}
 
 \pagestyle{fancy}
 \fancyhf{}
@@ -200,7 +200,7 @@ In other words, we have the following commutative diagram: \\
 \end{tikzcd}}
 \end{defn}
 
-\begin{prp}{}{} Let $f_\bullet:C_\bullet\to D_\bullet$ and $g_\bullet:D_\bullet\to E_\bullet$ be two chain maps. Then $g_\bullet\circ f_\bullet$ is also a chain map. \tcbline
+\begin{prp}{}{} Let $f_\bullet:C_\bullet\to D_\bullet$ and $g_\bullet:D_\bullet\to E_\bullet$ be two chain maps. Then $g_\bullet\circ f_\bullet$ is also a chain map. 
 \end{prp}
 
 \begin{defn}{Category of Chain Complexes}{} Let $\mA$ be an abelian category. Define $$\bold{Ch}(\mA)$$ to be the category of chain complexes where 
@@ -232,7 +232,7 @@ Elements of $Z_n(C_\bullet)=\ker(\partial_n)$ are called $n$-cycles and elements
 \end{itemize}
 \end{defn}
 
-\begin{lmm}{}{1.1.4} A chain map $f_\bullet:C_\bullet\to C_\bullet'$ induces group homomorphisms $$f_\ast:H_n(C_\bullet)\to H_n(C_\bullet')$$ between homology groups defined by $f_\ast([z])=[f(z)]$. \tcbline
+\begin{lmm}{}{1.1.4} A chain map $f_\bullet:C_\bullet\to C_\bullet'$ induces group homomorphisms $$f_\ast:H_n(C_\bullet)\to H_n(C_\bullet')$$ between homology groups defined by $f_\ast([z])=[f(z)]$. 
 \begin{proof}
 For every map $f_n:C_n\to C_n'$, we can restrict the domain to cycles so that we obtain a map $f_n:Z_n(C_\bullet)\to C_n'$. Using the relation given between the boundary operator and the family of maps, we check that this map descends to a map in homology. \\~\\
 
@@ -253,7 +253,7 @@ We then have functoriality of the induced map.
 \begin{itemize}
 \item $g_\ast\circ f_\ast=(g\circ f)_\ast$
 \item $\text{id}_\ast=\text{id}_{H_n}$
-\end{itemize} \tcbline
+\end{itemize} 
 \begin{proof}
 Firstly, we have that $$\partial\circ g_n\circ f_n=g_{n-1}\circ\partial\circ f_n=g_{n-1}\circ f_{n-1}\circ\partial$$ so that $g\circ f$ is indeed a chain map. \\~\\
 
@@ -321,7 +321,7 @@ In other words, we have the diagram: \\~\\
 In this case we write $f\simeq g$. 
 \end{defn}
 
-\begin{lmm}{}{} Let $a,b$ be chain homotopic. Then their induced maps in homology are equal. Meaning $$a_n=b_n:H_n(X)\to H_n(Y)$$ \tcbline
+\begin{lmm}{}{} Let $a,b$ be chain homotopic. Then their induced maps in homology are equal. Meaning $$a_n=b_n:H_n(X)\to H_n(Y)$$ 
 \begin{proof}
 Let $c\in\ker(\partial_n)$ be an $n$-cycle. Using the equation for chain homotopy, we have that 
 \begin{align*}
@@ -332,7 +332,7 @@ b(c)-a(c)&=\partial_{n+1}'(\eta_n(c))+\eta_{n-1}(\partial(c))\\
 \end{proof}
 \end{lmm}
 
-\begin{prp}{}{} Let $\mA$ be an abelian group. Let $f_1,g_1:C_\bullet\to D_\bullet$ and $f_2,g_2:D_\bullet\to E_\bullet$ be chain maps in $\bold{Ch}(\mA)$. If $f_1$ and $g_1$ are chain homotopic and $f_2$ and $g_2$ are chain homotopic, then $f_2\circ f_1$ is chain homotopic to $g_2\circ g_1$. \tcbline
+\begin{prp}{}{} Let $\mA$ be an abelian group. Let $f_1,g_1:C_\bullet\to D_\bullet$ and $f_2,g_2:D_\bullet\to E_\bullet$ be chain maps in $\bold{Ch}(\mA)$. If $f_1$ and $g_1$ are chain homotopic and $f_2$ and $g_2$ are chain homotopic, then $f_2\circ f_1$ is chain homotopic to $g_2\circ g_1$. 
 \begin{proof}
 The chain homotopies between $f_1$ and $g_1$ imposes the identity $$\partial\eta+\eta\partial=g_1-f_1$$ for $\eta:C_\bullet\to D_\bullet$ the given chain homotopy. Similarly, for $\nu:D_\bullet\to E_\bullet$ we have the identity $$\partial\nu+\nu\partial=g_2-f_2$$ Then we have that 
 \begin{align*}
@@ -352,13 +352,13 @@ Thus $g_2\eta+\nu f_1:C_n\to E_{n+1}$ would be a valid chain homotopy from $g_2\
 \begin{defn}{Chain Homotopy Equivalence}{} Let $\mA$ be an abelian category. Let $C_\bullet$ and $D_\bullet$ be two chain complexes in $\bold{Ch}(\mA)$. We say that they are chain homotopy equivalence if there exists chain maps $a_\bullet:C_\bullet\to D_\bullet$ and $b_\bullet:C_\bullet\to D_\bullet$ such that there are chain homotopies $$b_\bullet\circ a_\bullet\simeq\text{id}_{C_\bullet}\;\;\;\;\text{ and }\;\;\;\;a_\bullet\circ b_\bullet\simeq\text{id}_{D_\bullet}$$
 \end{defn}
 
-\begin{lmm}{}{} Let $\mA$ be an abelian category. Let $C_\bullet$ and $D_\bullet$ be chain homotopy equivalent in $\bold{Ch}(\mA)$. Then the chain maps induces an isomorphism $$H_n(C_\bullet)\cong H_n(D_\bullet)$$ in all degrees $n\in\N$. \tcbline
+\begin{lmm}{}{} Let $\mA$ be an abelian category. Let $C_\bullet$ and $D_\bullet$ be chain homotopy equivalent in $\bold{Ch}(\mA)$. Then the chain maps induces an isomorphism $$H_n(C_\bullet)\cong H_n(D_\bullet)$$ in all degrees $n\in\N$. 
 \begin{proof}
 We know that $b_\bullet\circ a_\bullet\simeq\text{id}_{C_\bullet}$ which means that they induce the same map: $$b_\ast\circ a_\ast=\text{id}_{H_n(C_\bullet)}$$ Similarly the chain homotopies $a_\bullet\circ b_\bullet\simeq\text{id}_{D_\bullet}$ induce the same map $$a_\ast\circ b_\ast:\text{id}_{H_n(D_\bullet)}$$ as the identity. Then these two identities mean that $a_\ast$ is both injective and surjective. 
 \end{proof}
 \end{lmm}
 
-\begin{prp}{}{} Let $\mA$ be an abelian category. Then chain homotopy equivalence defines an equivalence relation on all chain complexes in $\bold{Ch}(\mA)$. \tcbline
+\begin{prp}{}{} Let $\mA$ be an abelian category. Then chain homotopy equivalence defines an equivalence relation on all chain complexes in $\bold{Ch}(\mA)$. 
 \begin{proof}
 Clearly any chain complex is chain homotopy equivalent to itself by the identity map. If $C_\bullet$ and $D_\bullet$ are chain homotopy equivalent by the chain maps $a_\bullet:C_\bullet\to D_\bullet$ and $b_\bullet:D_\bullet\to C_\bullet$, then we have the identities $b_\bullet\circ a_\bullet=\text{id}_{C_\bullet}$ and $a_\bullet\circ b_\bullet=\text{id}_{D_\bullet}$. We can then read them in reverse so that $D_\bullet$ and $C_\bullet$ are chain homotopy equivalence by the maps $b_\bullet$ and $a_\bullet$. \\~\\
 
@@ -818,7 +818,7 @@ We find it important to notice the relation between all four functor here. Notic
 \subsection{Projective and Injective Modules}
 Let $R$ be a ring. Recall that an $R$-module $P$ is projective if $\Hom(P,-)$ is an exact functor. 
 
-\begin{lmm}{}{} Every free module is projective. \tcbline
+\begin{lmm}{}{} Every free module is projective. 
 \begin{proof}
 Let $R$ be a ring and let $F$ be a free $R$-module. Suppose that $F$ has basis $B$. Let $M,N$ be $R$-modules. Suppose that $f:N\to M$ is surjective and there exists an $R$-module homomorphism $g:R^n\to M$. Since $f$ is surjective, for each $b\in B$, we can choose a pre-image for $g(b)$ in $N$ for all $b\in B$. Call it $n_b$. Now define $h:F\to N$ by $b\mapsto n_b$ and then extend it $R$-linearly. Now if $\sum_{b\in B}k_bb\in F$, we have that 
 \begin{align*}
@@ -842,7 +842,7 @@ so that $f\circ h=g$. Thus $F$ is projective.
 P\arrow[ru, "\exists h", dashed]\arrow[r, "g"'] & M
 \end{tikzcd}} \\
 \item $P\oplus Q$ is a free $R$-module for some $R$-module $Q$. 
-\end{itemize} \tcbline
+\end{itemize} 
 \begin{proof}~\\
 \begin{itemize}
 \item $(3)\implies(1)$: Suppose that there exists a module $Q$ such that $P\oplus Q$ is free. Let $f:N\to M$ be a surjective $R$-module homomorphism and let $g:P\to M$ be an $R$-module homomorphism. 
