--- a/Algebra/Rings and Modules/Rings and Modules.tex
+++ b/Algebra/Rings and Modules/Rings and Modules.tex
@@ -1356,8 +1356,15 @@ Trivial.
 \end{proof}
 \end{lmm}
 
-\begin{lmm}{}{} Let $R$ be a ring. Let $0\to M'\to M\to M''\to 0$ be a short exact sequence of $R$-modules. Then $$l_R(M)=l_R(M')+l_R(M'')$$
-\end{lmm}
+\begin{prp}{}{} Let $R$ be a ring. Let $0\to M'\to M\to M''\to 0$ be a short exact sequence of $R$-modules. Then $$l_R(M)=l_R(M')+l_R(M'')$$
+\end{prp}
+
+\begin{prp}{}{} Let $R$ be a ring. Let $M,N$ be $R$-modules. Let $\varphi:M\to N$ be an $R$-module homomorphism. Then the following are true. 
+\begin{itemize}
+\item $l_R(M)\geq l_R(N)$. 
+\item If $\varphi$ is surjective, then $l_R(M)=l_R(N)$. 
+\end{itemize}
+\end{prp}
 
 \subsection{Composition Series}
 \begin{defn}{Composition Series}{} Let $R$ be a ring. Let $M$ be a left $R$-module. A composition series of $M$ is a sequence of $R$-submodules $$0=M_0\subset M_1\subset\cdots\subset M_k=M$$ such that $\frac{M_{i+1}}{M_i}$ is a simple $R$-module for $1\leq i<k$. 
